--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2227,3 +2227,11 @@ URL={http://yann.lecun.com/exdb/mnist/}
   year={2009},
   publisher={Cambridge university press}
 }
+
+@inproceedings{hein2019relu,
+  title={Why ReLU networks yield high-confidence predictions far away from the training data and how to mitigate the problem},
+  author={Hein, Matthias and Andriushchenko, Maksym and Bitterwolf, Julian},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  pages={41--50},
+  year={2019}
+}
