--- a/paper1/paper1.tex
+++ b/paper1/paper1.tex
@@ -939,7 +939,7 @@ stemming from the fact that making more positive predictions increases the chanc
 Fig.~\ref{fig:propublica_opp_scatter_tpr} shows that our method can span a wide range of possible TPR values.
 Tuning these hidden aspects of fairness is the strength of our method.
 
-\section{Discussion and conclusion}
+\section{Discussion and conclusion}\label{sec:paper1-discussion}
 Fairness is fundamentally not a challenge of algorithms alone, but very much a sociological challenge.
 %
 A lot of proposals have emerged recently for defining and obtaining fairness in machine learning-based decision making systems. 
@@ -1199,7 +1199,7 @@ If that is the case, then we get
 If we further assume $\mathit{PR}_b^1<\tfrac{1}{2}$,
 then we also have $\mathit{PR}_t<\tfrac{1}{2}$ and thus $\mathit{PR}_t<1-\mathit{PR}_t$.
 This implies that the denominator of $t_{s=1}$ is smaller and that, in turn, $t_{s=1}$ grows faster.
-This faster growth means that when minimizing $t_{s=0} + t_{s=1}$, we have to concentrate on $t_{s=1}$.
+This faster growth means that when minimising $t_{s=0} + t_{s=1}$, we have to concentrate on $t_{s=1}$.
 The minimum is then such that $t_{s=1}$ is 0, i.e.\ $\mathit{PR}_t=\mathit{PR}_b^1$.
 
 \subsection{Proof of Theorem 2}
